login page changes

--- a/app/css/login.css
+++ b/app/css/login.css
@@ -17,21 +17,18 @@ body {
 	width: 100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
-	background: #092756;
+	/*background: #092756;
 	background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
 	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
 	background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
 	background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
 	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), linear-gradient(135deg,  #670d10 0%,#092756 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );*/
+	background: #e5e6e7;
 }
 .login { 
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin: -150px 0 0 -150px;
 	width:300px;
-	height:300px;
+	margin:0 auto;
 }
 .login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
@@ -41,7 +38,7 @@ input {
 	background: rgba(0,0,0,0.3);
 	border: none;
 	outline: none;
-	padding: 10px;
+	padding: 10px!important;
 	font-size: 13px;
 	color: #fff;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
@@ -55,3 +52,39 @@ input {
 	transition: box-shadow .5s ease;
 }
 input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+
+.approval-logo {
+	text-align: center;
+}
+.logo-wrapper {
+	margin: 50px auto;
+}
+.login-wrapper {
+	margin: 50px auto;
+}
+.button-general {
+	background-color: #1b3b6a;
+    color: #fff;
+    border: none;
+	border-radius: 2px;
+	margin-top:20px;
+}
+.login-fields {
+	height: auto!important;
+	border: none!important;
+	text-shadow: none;
+	border-radius: 2px!important;
+}
+.login-fields:focus {
+	    border-color: #1b3b6a!important;
+    -webkit-box-shadow: 0 0 6px rgba(27,59,106,0.6)!important;
+    -moz-box-shadow: 0 0 6px rgba(27,59,106,0.6)!important;
+    box-shadow: 0 0 6px rgba(27,59,106,0.6)!important;	
+}
+.setting-para-wrapper {
+	margin-top:10px
+}
+.setting-para-wrapper p {
+	font-size: 14px;
+}
+	
