--- a/app/css/login.css
+++ b/app/css/login.css
@@ -82,7 +82,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     box-shadow: 0 0 6px rgba(27,59,106,0.6)!important;	
 }
 .setting-para-wrapper {
-	margin-top:10px
+	margin-top: 30px;
 }
 .setting-para-wrapper p {
 	font-size: 14px;
