--- a/app/css/app.css
+++ b/app/css/app.css
@@ -13,9 +13,9 @@ li {
     color: #696969;
 }
 #mainView {
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     clear: both;
-    padding: 0 1em;
+    /*padding: 0 1em;*/
 }
 .active {
     background-color: #FFF;
@@ -65,10 +65,13 @@ h2 {
 }
 
 .wrapper {
-    max-width: 400px;
+    max-width: 100%;
     margin: 50px auto;
     padding-left: 1em;
     padding-right: 1em;
+}
+.blue-color {
+	color: #183b6b;	
 }
 
 /**
@@ -124,7 +127,7 @@ h2 {
 /* card meta */
 .card__meta time {
     font-size: 1.5rem;
-    color: #bbb;
+    color: #6d7073;
     margin-left: 0.8rem;
 }
 
@@ -136,6 +139,15 @@ h2 {
 }
 .card__article a:hover {
     color: #2980b9;
+}
+.card__article h4 {
+	color: #183b6b;	
+}
+.card__article p {
+	color: #44b54a;	
+}
+.card__article span {
+	color: #6d7073;	
 }
 
 /* card action */
@@ -243,4 +255,9 @@ h2 {
 .twitter:hover,
 .googleplus:hover {
     color: #eee;
+}
+.heading-blue {
+	color: #183b6b;
+    font-family: sans-serif;
+	font-size: 46px;
 }
