--- a/app/css/login.css
+++ b/app/css/login.css
@@ -60,7 +60,10 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	margin: 50px auto;
 }
 .login-wrapper {
-	margin: 50px auto;
+	position: absolute;
+    left: 0;
+    right: 0;
+    top: 10%;
 }
 .button-general {
 	background-color: #1b3b6a;
